# strict-env

./: README.md  example.py  pyproject.toml
strict_env/: __init__.py
tests/: test_strict_env.py
