[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "strict-env"
version = "0.1.0"
description = "Fail-fast, typed environment-variable configuration for Python."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "Saifullah Khan", email = "saifullah4khan@gmail.com" }]
keywords = ["env", "environment", "configuration", "config", "12factor", "settings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/saifullah4khan/strict-env"
Issues = "https://github.com/saifullah4khan/strict-env/issues"

[tool.setuptools]
packages = ["strict_env"]
